<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/rl_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:id="@+id/iv_appleIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/iv_icon_text"
            android:padding="40dp"
            android:src="@drawable/apple_icon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical" >

            <Button
                android:id="@+id/bt_searchBluetooth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#3379E7"
                android:padding="36dp"
                android:text="@string/bt_search_bluetooth_text"
                android:textColor="#FFF"
                android:textSize="36sp" />

            <Button
                android:id="@+id/bt_receiveData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#34B4E3"
                android:padding="36dp"
                android:text="@string/bt_receive_data_text"
                android:textColor="#FFF"
                android:textSize="36sp" />

            <Button
                android:id="@+id/bt_classResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#33E381"
                android:padding="36dp"
                android:text="@string/bt_class_result_text"
                android:textColor="#FFF"
                android:textSize="36sp" />
        </LinearLayout>
    </RelativeLayout>

    <ImageView
        android:id="@+id/iv_splash"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/splash_bg"
        android:contentDescription="@string/iv_splash_content" />

</FrameLayout>