<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/iv_appleIcon_searchBluetooth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/iv_icon_text"
        android:padding="40dp"
        android:src="@drawable/apple_icon" />

    <LinearLayout
        android:id="@+id/ll_blueDevice"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <Button
            android:id="@+id/bt_searchBluetooth_searchBluetooth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#3779E7"
            android:padding="20dp"
            android:text="@string/bt_search_bluetooth_text"
            android:textColor="#FFF"
            android:textSize="36sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingLeft="10dp" >

            <ImageView
                android:id="@+id/iv_sliding_searchBluetooth"
                android:layout_width="10dp"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:background="#1C3E7B"
                android:paddingLeft="15dp"
                android:paddingRight="10dp" />

            <ListView
                android:id="@+id/lv_bluetoothDevice"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_weight="1" >
            </ListView>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_back_BluetoothSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/iv_back_text"
        android:src="@drawable/triangle"
        android:visibility="invisible" />

</LinearLayout>